# S3Explorer

./: .env.example  .eslintrc.cjs  .gitignore  BUILD.md  CLAUDE.md  MIGRATION_UPLOAD.md  PLAN_BUCKET_SETTINGS.md  PLAN_CLIPBOARD_NATIVE.md  PLAN_CLIPBOARD_UPLOAD.md  PLAN_CORRECTIONS_INDEX.md  PLAN_IMPLEMENTATION.md  PLAN_INDEX_CANCEL.md  PLAN_METRICS_MIGRATION.md  QUICKSTART.md  README.md  SETUP.md  components.json  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-release.yml  ci.yml
docs/: INDEX_FIXES_PLAN.md  PLAN_INDEX_LOCAL.md
scripts/: build-all.ps1  build-all.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: cache_manager.rs  commands.rs  crypto.rs  database.rs  errors.rs  index_manager.rs  main.rs  metrics.rs  metrics_storage.rs  models.rs  profiles.rs  s3_adapter.rs  validation.rs
src-tauri/src/sql/: schema_v1.sql
src/assets/: main.css  tui-image-editor-override.css
src/components/: BucketEmojiPicker.vue  BucketList.vue  BucketSettingsModal.vue  ClipboardUploadConfirm.vue  CodeEditor.vue  ConfirmDialog.vue  ConnectionListModal.vue  ContextMenu.vue  DownloadProgress.vue  ImageEditor.vue  IndexButton.vue  IndexProgress.vue  MetricsButton.vue  ObjectBrowser.vue  ObjectViewer.vue  ProfileManager.vue  RustUploadProgress.vue  SettingsButton.vue  ToastContainer.vue  UploadProgress.vue
src/components/ui/input/: Input.vue
src/components/ui/popover/: PopoverContent.vue  PopoverTrigger.vue
src/components/ui/tabs/: Tabs.vue  TabsContent.vue  TabsList.vue  TabsTrigger.vue
src/components/ui/tooltip/: Tooltip.vue  TooltipContent.vue  TooltipProvider.vue  TooltipRoot.vue  TooltipTrigger.vue  index.ts
src/composables/: useBucketEmojis.ts  useBucketStats.ts  useBucketStatsInvalidation.ts  useCacheMetrics.ts  useClipboardUpload.ts  useDialog.ts  useI18n.ts  useIndexManager.ts  useMetrics.ts  useObjectLock.ts  useOptimisticBatch.ts  useRustDownloadManager.ts  useRustUploadManager.ts  useSearchIndex.ts  useSwipeBack.ts  useSystemTheme.ts  useToast.ts  useUploadManager.ts  useVirtualScroll.ts
src/directives/: tooltip.ts
src/i18n/: translations.ts  translations.ts.backup  translations.ts.bak
src/services/: metricsStorage.ts  tauri.ts
src/stores/: app.ts  settings.ts
src/types/: errors.ts  index.ts  metrics.ts
src/utils/: formatters.ts  logger.ts  memoryMonitor.ts  multipartUpload.ts  throttle.ts  validators.ts
src/views/: HomeView.vue
src/workers/: searchIndexWorker.ts
