[package]
name = "s3-explorer"
version = "0.1.0"
description = "S3 Explorer - S3-compatible object storage browser"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "dialog-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
aws-sdk-s3 = "1.17"
aws-config = "1.1"
aws-credential-types = "1.1"
aws-smithy-runtime-api = "1.1"
aws-smithy-types = "1.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
dirs = "5.0"
aes-gcm = "0.10"
base64 = "0.21"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
