[package]
name = "s3-explorer"
version = "0.1.0"
description = "S3 Explorer - S3-compatible object storage browser"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "dialog-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
aws-sdk-s3 = "1.17"
aws-config = "1.1"
aws-credential-types = "1.1"
aws-smithy-runtime-api = "1.1"
aws-smithy-runtime = { version = "1.1", features = ["client"] }
aws-smithy-types = "1.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2.5"

# SQLite database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
lazy_static = "1.4"

# Production-grade cache with LRU + TTL (used by Cloudflare, Fastly)
moka = { version = "0.12", features = ["sync"] }

# Cross-platform clipboard access
arboard = "3"

# macOS-specific clipboard file reading
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

# Windows-specific clipboard with CF_HDROP support
[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
